practicas/eda/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/java/jdk1.8.0_131/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/opt/bluej.4.1.4/lib/bluejcore.jar:/opt/bluej.4.1.4/lib/junit-4.11.jar:/opt/bluej.4.1.4/lib/hamcrest-core-1.3.jar:/opt/bluej.4.1.4/lib/lang-stride.jar:/labos/alumnos/mapel12m/Documentos/graphLib.jar:/labos/alumnos/mapel12m/DiscoW/prg/graphLib.jar:/opt/bluej.4.1.4/lib/userlib/pi4j-core.jar:/opt/bluej.4.1.4/lib/userlib/pi4j-device.jar:/opt/bluej.4.1.4/lib/userlib/pi4j-gpio-extension.jar:/opt/bluej.4.1.4/lib/userlib/pi4j-service.jar:/labos/alumnos/mapel12m/DiscoW/eda
-d
/labos/alumnos/mapel12m/DiscoW/eda/doc
-encoding
UTF-8
-charset
UTF-8
/labos/alumnos/mapel12m/DiscoW/eda/aplicaciones/biblioteca/Indice.java
<---- end of javadoc command ---->
Loading source file /labos/alumnos/mapel12m/DiscoW/eda/aplicaciones/biblioteca/Indice.java...
Constructing Javadoc information...
Standard Doclet version 1.8.0_131
Building tree for all the packages and classes...
Generating /labos/alumnos/mapel12m/DiscoW/eda/doc/aplicaciones/biblioteca/Indice.html...
Generating /labos/alumnos/mapel12m/DiscoW/eda/doc/aplicaciones/biblioteca/package-frame.html...
Generating /labos/alumnos/mapel12m/DiscoW/eda/doc/aplicaciones/biblioteca/package-summary.html...
Generating /labos/alumnos/mapel12m/DiscoW/eda/doc/constant-values.html...
/labos/alumnos/mapel12m/DiscoW/eda/aplicaciones/biblioteca/Indexador.java:121: error: illegal start of expression
                        indices.insertar(clave, );
                                                ^
Building index for all the packages and classes...
Building index for all classes...
Generating /labos/alumnos/mapel12m/DiscoW/eda/doc/allclasses-frame.html...
Generating /labos/alumnos/mapel12m/DiscoW/eda/doc/allclasses-noframe.html...
Generating /labos/alumnos/mapel12m/DiscoW/eda/doc/index.html...
1 error
